<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Registration</string>
    <string name="button_send">Send</string>
    <string name="non_member_sign_on">Non-Member</string>
    <string name="member_sign_on">Member</string>
    <string name="title_activity_member_sign_on">Member Sign On</string>
    <string name="title_activity_non_member_sign_on">Non-Member Sign On</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="race_no">Race Number</string>
    <string name="dob">Date of Birth</string>
    <string name="emergency_contact">Emergency Contact Name</string>
    <string name="emergency_contact_no">Emergency Contact Number</string>
    <string name="tester">Test String</string>
    <string name="search_title">Member Name</string>
    <string name="spinner_title">Race Grade</string>
    <string-array name="Race_grades">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>Kids</item>
    </string-array>
    <string name="title_activity_admin_usage">AdminUsage</string>
</resources>
