<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.huttcross.registration.NonMemberSignOn"
    tools:showIn="@layout/activity_non_member_sign_on">

    <EditText android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="textCapWords"/>

    <EditText android:id="@+id/last_name"
        android:layout_below="@id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="textCapWords"/>

    <EditText android:id="@+id/dob"
        android:layout_below="@id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dob"
        android:inputType="date"/>

    <EditText android:id="@+id/emergency_contact"
        android:layout_below="@id/dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emergency_contact"
        android:inputType="textCapWords"/>

    <EditText android:id="@+id/emergency_contact_no"
        android:layout_below="@id/emergency_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emergency_contact_no"
        android:inputType="phone"/>

    <EditText android:id="@+id/race_no"
        android:layout_below="@id/emergency_contact_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/race_no"
        android:inputType="number"/>

    <Spinner android:id="@+id/grade"
        android:layout_below="@id/race_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_title"
        android:entries="@array/Race_grades"/>

    <Button android:id="@+id/sign_on"
        android:layout_below="@id/grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign-on"
        android:onClick="putRegisteredRiders" />


</RelativeLayout>
